# IntroToRobotics

./: index.md
Term_Project/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Term_Project/devel/lib/pkgconfig/: tgr_simulation.pc
Term_Project/devel/lib/tgr_simulation/: readdemo
Term_Project/src/tgr_simulation/: CMakeLists.txt
Term_Project/src/tgr_simulation/meshes/: right_front_wheel_link.STL
Term_Project/src/tgr_simulation/src/: main.cpp  objSpawner.cpp  readdemo.cpp
myrobotws/: README.txt
myrobotws/devel/: .catkin
myrobotws/devel/lib/manipulator_core/: robot_model_node  robot_model_node_pr3
myrobotws/devel/lib/moverobot/: move
myrobotws/devel/lib/moverobotwithobject/: movewithobject
myrobotws/devel/lib/pkgconfig/: config_files.pc  manipulator_core.pc  moverobot.pc  moverobotwithobject.pc  my_pr_robot.pc  robot_description.pc
myrobotws/src/: README.md  README.txt
myrobotws/src/config_files/: .setup_assistant  CMakeLists.txt  package.xml
myrobotws/src/config_files/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pr_robot.srdf  ros_controllers.yaml
myrobotws/src/config_files/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  pr_robot_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  (+2 more)
myrobotws/src/manipulator_core/: CMakeLists.txt
myrobotws/src/moverobot/: CMakeLists.txt
myrobotws/src/moverobot/src/: move.cpp
myrobotws/src/moverobotwithobject/: CMakeLists.txt  package.xml
myrobotws/src/my_pr_robot/: CMakeLists.txt
myrobotws/src/robot_description/: CMakeLists.txt  package.xml
termProject/devel/: .catkin
termProject/src/: Readme.md  rapor.odt
termProject/src/tgr_msgs/: CMakeLists.txt  package.xml
termProject/src/tgr_msgs/msg/: CameraSpecs.msg  PixelPose.msg  PixelPoses.msg  VehicleMode.msg
termProject/src/tgr_simulation/: CMakeLists.txt  read.txt
termProject/src/tgr_simulation/include/: common.cpp  common.h
termProject/src/tgr_simulation/launch/: gazebo.launch  tgr_start.launch
termProject/src/tgr_simulation/meshes/: base_link.STL  left_back_wheel_link.STL  left_front_wheel_link.STL
termProject/src/tgr_simulation/src/: main.cpp  objSpawner.cpp  readdemo.cpp
tgr_simulation/: read.txt
tgr_simulation/config/: diff_drive.yaml
tgr_simulation/include/: gazebo_cube_spawner.h
tgr_simulation/launch/: tgr_start.launch  view_demo.launch
tgr_simulation/meshes/: right_back_wheel_link.STL
tgr_simulation/urdf/: Diff_Drive.gv  tgr.urdf  tgr.urdf.xacro
(+108 files in other folders)
